--- a/amazon.html
+++ b/amazon.html
@@ -53,9 +53,10 @@
     
     <div class="main">
       <div class="products-grid js-products-grid">
-        
+
       </div>
     </div>
+    <script src="data/products.js" defer></script>
     <script src="script/amazon.js" async defer></script>
   </body>
 </html>
